# tiny-web-server

./: .gitignore  CMakeLists.txt  README.md
Learn/Code01/: main.cpp  udp_client.cpp
Learn/TCP-Com/: tcp_client.cpp  tcp_server.cpp
Learn/cgi-bin-srv/: test_cgi.cpp
Learn/chatSrv/: chatSrv.cpp  mydb.cpp  mydb.h  tcp_client.cpp  tcp_client_read.cpp
Learn/epoll/: epoll_srv.cpp
Learn/event/: test_event.cpp
Learn/event_2_read_fifo/: event_read_fifo.cpp  write_to_fifo.cpp
Learn/event_3_sign/: event_sign.cpp
Learn/event_4_srv/: event_srv.cpp
Learn/fileno/: test_fileno.cpp
Learn/mysql-use/: mydb.sql  test_mysql.cpp
Learn/thread/: test_01.cpp
Preparation/Code_01/calc/: Makefile  Makefile1  Makefile2  Makefile3  Makefile4  calc.cpp  main.cpp
Preparation/Code_01/library_so/include/: calc.h
Preparation/Code_01/use_open/: 1.txt  chdir.c  chmod.c  cpy.txt  create_file.c  dup.c  dup2.cpp  file_attr.c  fnctl.c  ls-l.c  lseek.c  read_file_number.c  read_write.c  stat.c  truncate.c  use_open.cpp
Preparation/Code_02/: chat_a.c  chat_b.c  execl.c  execlp.c  exit.c  fifo_read.c  fifo_write.c  fork_orphan.c  fpathconfig.c  hello.c  mkfifo.c  noblock.c  parent_child_ipc.c  pipe.c  pipe_without_sleep.c  t_fork.c  wait.c  waitpid.c  zombie.c
Preparation/Code_03/: CMakeLists.txt  cond.c  dead_lock.c  dead_lock_ii.c  mutex.c  producer_customer.c  pthread_attr.c  pthread_cancel.c  pthread_create.c  pthread_detach.c  pthread_exit.c  pthread_join.c  rwlock.c  sell_tickets.c  semaphore.c
Preparation/Code_04/: CMakeLists.txt  broadcast_client.c  broadcast_server.c  byte_order.c  byte_trans.c  client.c  client_ii.c  client_iii.c  epoll_server.c  epoll_server_ET.c  epoll_server_LT.c  ip_trans.c  ipc_client.c  ipc_server.c  multi_broadcast_client.c  multi_broadcast_server.c  poll_server.c  select_server.c  server.c  server_process.c  server_thread.c  udp_client.c  udp_server.c
Preparation/Code_05/: http_conn.hpp  locker.hpp  main.cpp  serv  thread_pool.hpp
Preparation/Code_05/no_active/: lst_timer.h  nonactive_conn.cpp
Preparation/webserver/: http_conn.cpp  serv
